--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "date-fns": "^2.28.0",
     "googleapis": "^92.0.0",
     "nest-winston": "^1.6.2",
     "nestjs-telegraf": "^2.4.0",
