--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,10 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/mustache": "^4.1.2",
     "date-fns": "^2.28.0",
     "googleapis": "^92.0.0",
+    "mustache": "^4.2.0",
     "nest-winston": "^1.6.2",
     "nestjs-telegraf": "^2.4.0",
     "reflect-metadata": "^0.1.13",
