--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/mustache": "^4.1.2",
     "date-fns": "^2.28.0",
     "googleapis": "^92.0.0",
+    "iterable-chain": "^2.0.0-alpha.1",
     "mustache": "^4.2.0",
     "nest-winston": "^1.6.2",
     "nestjs-telegraf": "^2.4.0",
